--- a/src/components/Navbar/NavbarDesktop.astro
+++ b/src/components/Navbar/NavbarDesktop.astro
@@ -1,7 +1,11 @@
 ---
 import type { HTMLAttributes } from "astro/types";
+import { getCollection } from "astro:content";
 
 import { SITE_NAVIGATION } from "../../const";
+import { icons } from "../../assets/globs";
+
+import ImageLink from "../ImageLink.astro";
 import NavLink from "./NavLink.astro";
 
 interface Props extends HTMLAttributes<"nav"> {
@@ -9,9 +13,36 @@ interface Props extends HTMLAttributes<"nav"> {
   current: string;
 }
 
+const socialMedia = (await getCollection("socialMedia")).map((s) => s.data);
+socialMedia.forEach((s) => {
+  if (!icons[s.imagePath])
+    throw new Error(`"${s.imagePath} does not exist in glob", ${icons}""`);
+});
+
 const props = Astro.props;
 ---
 
-<nav class:list={[props.class]} {...props}>
-  {SITE_NAVIGATION.map((link) => <NavLink {...link} />)}
-</nav>
+<div
+  class:list={["bg-gradient-to-r from-cyan-900 to-transparent", props.class]}
+  {...props}
+>
+  <div class="sticky top-0 flex flex-col p-8 justify-between h-screen">
+    <nav>
+      <span class="text-2xl">Navigation</span>
+      {SITE_NAVIGATION.map((link) => <NavLink {...link} />)}
+    </nav>
+    <div class="flex gap-2">
+      {
+        socialMedia.map((s) => (
+          <ImageLink
+            src={icons[s.imagePath]()}
+            href={s.href}
+            alt={s.alt}
+            width={36}
+            height={36}
+          />
+        ))
+      }
+    </div>
+  </div>
+</div>
