--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -22,18 +22,20 @@ const { title, description, prevNav } = Astro.props;
   <head>
     <BaseHead title={"Matthew Ubalde | " + title} description={description} />
   </head>
-  <body class="h-screen">
+  <body
+    class="h-fit overflow-x-hidden bg-indigo-500 bg-gradient-to-b from-indigo-500 via-purple-400 to-indigo-500 text-cyan-50"
+  >
     <NavbarMobile prev={prevNav} current={currentPath} class="sm:hidden" />
-    <div class="grid grid-cols-4 gap-8 p-4 sm:p-8">
+    <div class="grid sm:grid-cols-4 grid-rows-5 ml-12 sm:m-0">
       <NavbarDesktop
         prev={prevNav}
         current={currentPath}
-        class="hidden sm:block col-span-1"
+        class="hidden sm:block col-span-1 row-span-5"
       />
-      <main class="col-span-4 sm:col-span-3">
+      <main class="col-span-3 row-span-4">
         <slot />
       </main>
+      <Footer class="col-span-3 row-span-1" />
     </div>
-    <Footer />
   </body>
 </html>
