--- a/src/components/ContainerProject.astro
+++ b/src/components/ContainerProject.astro
@@ -1,5 +1,3 @@
-<div
-  class="flex flex-col justify-center items-center gap-4 sm:gap-8 lg:w-3/4 lg:mx-auto m-4"
->
+<div class="flex flex-col justify-center items-center gap-4 sm:gap-8 m-4">
   <slot />
 </div>
