--- a/src/components/ContainerSection.astro
+++ b/src/components/ContainerSection.astro
@@ -1,6 +1,10 @@
 ---
 import type { HTMLAttributes } from "astro/types";
-import type { FlexComponentType, MediaQueryComponentType } from "../types";
+import type {
+  FlexComponentType,
+  MalleableComponentType,
+  MediaQueryComponentType,
+} from "../types";
 
 /**
  * A flex container. The col and row is biased towards the desktop version
@@ -8,10 +12,11 @@ import type { FlexComponentType, MediaQueryComponentType } from "../types";
  */
 
 type Props = HTMLAttributes<"div"> &
+  MalleableComponentType &
   FlexComponentType &
   MediaQueryComponentType;
 
-const { class: className, noMedia, col, row } = Astro.props;
+const { class: className, noMedia, col, row, noMargin } = Astro.props;
 ---
 
 <div
@@ -20,7 +25,7 @@ const { class: className, noMedia, col, row } = Astro.props;
     "flex gap-4 sm:gap-8",
     noMedia ? row && "flex-row" : row && "flex-col sm:flex-row",
     noMedia ? col && "flex-col" : col && "flex-row sm:flex-col",
-    "m-4 sm:m-8",
+    !noMargin && "m-4 sm:m-8",
   ]}
 >
   <slot />
