--- a/src/layouts/ArticleLayout.astro
+++ b/src/layouts/ArticleLayout.astro
@@ -10,6 +10,7 @@ import ImageLink from "../components/ImageLink.astro";
 import itchioImage from "../assets/icons/itch-io.svg";
 import steamImage from "../assets/icons/steam.svg";
 import githubImage from "../assets/icons/github-mark.svg";
+import ContainerSection from "../components/ContainerSection.astro";
 
 interface Props {
   prevNav: string;
@@ -41,10 +42,8 @@ const {
 ---
 
 <BaseLayout prevNav={prevNav} title={title} description={description}>
-  <main class="min-h-screen sm:w-2/3 sm:mx-auto">
-    <div
-      class="flex flex-col sm:flex-row justify-center items-center gap-8 m-8"
-    >
+  <main class="min-h-screen">
+    <ContainerSection>
       <Section noMargin textContent class="flex-grow">
         <h1>{title}</h1>
         <Image
@@ -69,7 +68,12 @@ const {
 
         <p>{description}</p>
       </Section>
-      <div class="flex flex-col justify-center items-center gap-8 sm:h-fit">
+      <ContainerSection
+        noMargin
+        noMedia
+        col
+        class="justify-center items-center"
+      >
         {
           summaryPoints && (
             <Section noMargin textContent>
@@ -121,8 +125,8 @@ const {
             )
           }
         </Section>
-      </div>
-    </div>
+      </ContainerSection>
+    </ContainerSection>
     <Section articleContent>
       <slot />
     </Section>
