--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Section from "../components/Section.astro";
 import portraitImage from "../assets/portfolio-portrait.png";
 import ContainerProject from "../components/ContainerProject.astro";
 import ProjectShowcase from "../components/ProjectShowcase.astro";
-import ContainerSection from "../components/ContainerSection.astro";
+import LayoutSection from "../components/LayoutSection.astro";
 
 const articles = await getCollection("articles", (a) => a.data.featured);
 
@@ -24,7 +24,7 @@ articles.sort(
   description="Ranging from Web and Game Development, and Creative Arts!"
 >
   <!-- Introduction -->
-  <ContainerSection
+  <LayoutSection
     noMedia
     col
     class="relative justify-start min-h-screen overflow-hidden"
@@ -58,7 +58,7 @@ articles.sort(
       loading="eager"
       alt="Matthew wearing a blue, orange-stripped, t-shirt and glasses."
     />
-  </ContainerSection>
+  </LayoutSection>
   <ContainerProject>
     {
       articles &&
