--- a/src/pages/comp-experience/mobile/index.astro
+++ b/src/pages/comp-experience/mobile/index.astro
@@ -4,7 +4,7 @@ import { getCollection } from "astro:content";
 import Layout from "../../../layouts/PageLayout.astro";
 import Section from "../../../components/Section.astro";
 import BadgeDisplay from "../../../components/BadgeDisplay.astro";
-import ContainerSection from "../../../components/ContainerSection.astro";
+import LayoutSection from "../../../components/LayoutSection.astro";
 
 const experiences = await getCollection("experiences");
 const mobileExp = experiences.find((e) => e.id === "mobile")?.data;
@@ -14,7 +14,7 @@ const mobileExp = experiences.find((e) => e.id === "mobile")?.data;
   title="Mobile"
   description="Have experience in Android Studio and React Native to create Android apps"
 >
-  <ContainerSection row class="justify-center">
+  <LayoutSection row class="justify-center">
     <Section noMargin textContent class="sm:w-1/3">
       <h1>Experience Summary</h1>
       <p>
@@ -33,7 +33,7 @@ const mobileExp = experiences.find((e) => e.id === "mobile")?.data;
         />
       )
     }
-  </ContainerSection>
+  </LayoutSection>
   <!-- <div>
     <Section textContent class="w-1/2 mx-auto">
       <h1>React Native Projects</h1>
