--- a/src/components/Navbar/NavbarDesktop.astro
+++ b/src/components/Navbar/NavbarDesktop.astro
@@ -26,7 +26,7 @@ const props = Astro.props;
   class:list={["bg-gradient-to-r from-cyan-900 to-transparent", props.class]}
   {...props}
 >
-  <div class="sticky top-0 flex flex-col p-8 justify-between h-screen">
+  <div class="sticky top-0 flex flex-col px-4 py-8 justify-between h-screen">
     <nav>
       <span class="text-2xl">Navigation</span>
       {SITE_NAVIGATION.map((link) => <NavLink {...link} />)}
