Make mobile navigation at the top instead

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -26,7 +26,7 @@ const { title, description, prevNav } = Astro.props;
     class="h-fit overflow-x-hidden bg-indigo-500 bg-gradient-to-b from-indigo-500 via-purple-400 to-indigo-500 text-cyan-50"
   >
     <NavbarMobile prev={prevNav} current={currentPath} class="md:hidden" />
-    <div class="flex flex-row ml-12 md:m-0">
+    <div class="flex flex-row md:m-0">
       <NavbarDesktop
         prev={prevNav}
         current={currentPath}
