--- a/src/components/Navbar/NavbarMobile.astro
+++ b/src/components/Navbar/NavbarMobile.astro
@@ -22,14 +22,14 @@ socialMedia.forEach((s) => {
 const props = Astro.props;
 ---
 
-<nav-bar class:list={["flex flex-col gap-2", props.class]} {...props}>
+<nav-bar class:list={[props.class]} {...props}>
   <button
-    class="fixed left-0 inset-y-0 z-50 p-2 text-2xl text-left [writing-mode:vertical-rl] bg-gradient-to-b from-cyan-900 to-transparent"
+    class="sticky top-0 w-full z-50 p-4 text-4xl text-left bg-gradient-to-b from-cyan-900 to-transparent"
     >Navigation</button
   >
   <nav
     class:list={[
-      "z-50 fixed inset-0 hidden flex flex-col justify-between p-8 bg-gradient-to-b from-cyan-900 to-transparent",
+      "z-50 fixed inset-0 hidden flex flex-col justify-between p-4 bg-gradient-to-b from-cyan-900 to-transparent",
       props.class,
     ]}
     {...props}
@@ -48,8 +48,8 @@ const props = Astro.props;
             src={icons[s.imagePath]()}
             href={s.href}
             alt={s.alt}
-            width={48}
-            height={48}
+            width={64}
+            height={64}
           />
         ))
       }
