--- a/src/components/ProjectShowcase.astro
+++ b/src/components/ProjectShowcase.astro
@@ -25,8 +25,67 @@ import githubImage from "../assets/icons/github-mark.svg";
 import FormattedDate from "./FormattedDate.astro";
 ---
 
-<div class="flex flex-col sm:flex-row gap-2 justify-center items-center">
-  <!-- Project about -->
+<Section noMargin noPadding class="group relative p-4" tabindex={0}>
+  <div class="rounded-md overflow-hidden">
+    <Image
+      class="group-hover:scale-125 rounded-md object-contain transition-all"
+      src={coverImage}
+      alt={coverImageAlt}
+      width={1280}
+      height={720}
+    />
+  </div>
+  <div class="hidden group-hover:flex items-end p-4">
+    <div class="flex-grow">
+      <h1>{title}</h1>
+      {
+        dateProjectPublished && (
+          <div class="text-sm">
+            <FormattedDate date={dateProjectPublished} />
+          </div>
+        )
+      }
+      <p>{description}</p>
+      <a class="font-bold text-lg" href={href}>Read?</a>
+    </div>
+    {
+      (itchioLink || steamLink || githubLink) && (
+        <div class="flex flex-col gap-2 justify-end items-end">
+          {itchioLink && (
+            <ImageLink
+              src={itchioImage}
+              alt=""
+              href={itchioLink}
+              width={48}
+              height={48}
+            />
+          )}
+          {steamLink && (
+            <ImageLink
+              src={steamImage}
+              alt=""
+              href={steamLink}
+              width={48}
+              height={48}
+            />
+          )}
+          {githubLink && (
+            <ImageLink
+              src={githubImage}
+              alt=""
+              href={githubLink}
+              width={48}
+              height={48}
+            />
+          )}
+        </div>
+      )
+    }
+  </div>
+</Section>
+
+<!-- <div class="flex flex-col sm:flex-row gap-2 justify-center items-center">
+  Project about
   <div
     class="flex flex-row-reverse sm:flex-row justify-center items-center gap-2"
   >
@@ -82,7 +141,7 @@ import FormattedDate from "./FormattedDate.astro";
       <a class="text-xl font-bold" href={href}>Read more...</a>
     </Section>
   </div>
-  <!-- Image display -->
+  Image display
   <Section noMargin noPadding class="p-4">
     <Image
       class="rounded-md object-contain"
@@ -92,4 +151,4 @@ import FormattedDate from "./FormattedDate.astro";
       height={720}
     />
   </Section>
-</div>
+</div> -->
