Adjust the ExperienceBadge to be smaller

--- a/src/components/ExperienceBadge.astro
+++ b/src/components/ExperienceBadge.astro
@@ -15,7 +15,7 @@ if (!icons[src]) throw new Error(`"${src} does not exist in glob", ${icons}`);
           hover:scale-110 transition-transform"
 >
   <Image
-    class="flex-grow min-h-12 max-h-24 min-w-12 max-w-24"
+    class="flex-grow size-12 sm:size-14 md:size-18"
     src={icons[src]()}
     alt={alt}
     width={128}
