Make Footer stick to the bottom

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -32,7 +32,7 @@ const { title, description, prevNav } = Astro.props;
         current={currentPath}
         class="hidden md:block flex-shrink-0"
       />
-      <div class="">
+      <div class="flex flex-col justify-between">
         <main>
           <slot />
         </main>
