--- a/src/components/ProjectShowcase.astro
+++ b/src/components/ProjectShowcase.astro
@@ -26,9 +26,9 @@ import FormattedDate from "./FormattedDate.astro";
 ---
 
 <Section noMargin noPadding class="group relative p-4" tabindex={0}>
-  <div class="rounded-md overflow-hidden">
+  <div class="rounded-md overflow-hidden group-hover:h-64 transition-all">
     <Image
-      class="group-hover:scale-125 rounded-md object-contain transition-all"
+      class="group-hover:scale-110 group-hover:-translate-y-48 rounded-md object-contain transition-all"
       src={coverImage}
       alt={coverImageAlt}
       width={1280}
@@ -46,7 +46,7 @@ import FormattedDate from "./FormattedDate.astro";
         )
       }
       <p>{description}</p>
-      <a class="font-bold text-lg" href={href}>Read?</a>
+      <a class="font-bold text-lg underline" href={href}>Read?</a>
     </div>
     {
       (itchioLink || steamLink || githubLink) && (
