--- a/src/components/ProjectShowcase.astro
+++ b/src/components/ProjectShowcase.astro
@@ -25,17 +25,17 @@ import githubImage from "../assets/icons/github-mark.svg";
 import FormattedDate from "./FormattedDate.astro";
 ---
 
-<Section noMargin noPadding class="group relative p-4" tabindex={0}>
-  <div class="rounded-md overflow-hidden group-hover:h-64 transition-all">
+<Section noMargin noPadding class="group relative w-1/3" tabindex={0}>
+  <div class="rounded-md overflow-hidden transition-all">
     <Image
-      class="group-hover:scale-110 group-hover:-translate-y-48 rounded-md object-contain transition-all"
+      class="group-hover:scale-125 group-hover:-translate-y-4 rounded-md object-contain transition-all"
       src={coverImage}
       alt={coverImageAlt}
       width={1280}
       height={720}
     />
   </div>
-  <div class="hidden group-hover:flex items-end p-4">
+  <div class="flex p-4">
     <div class="flex-grow">
       <h1>{title}</h1>
       {
@@ -50,7 +50,7 @@ import FormattedDate from "./FormattedDate.astro";
     </div>
     {
       (itchioLink || steamLink || githubLink) && (
-        <div class="flex flex-col gap-2 justify-end items-end">
+        <div class="flex flex-col gap-2 justify-end items-end w-24 p-1">
           {itchioLink && (
             <ImageLink
               src={itchioImage}
