Made the Article more tighter on higher screens

--- a/src/layouts/ArticleLayout.astro
+++ b/src/layouts/ArticleLayout.astro
@@ -126,7 +126,7 @@ const {
     }
   </LayoutSection>
   <!-- Article Content -->
-  <Section articleContent>
+  <Section noMargin articleContent class="md:w-3/4 m-4 md:mx-auto">
     <slot />
   </Section>
 </BaseLayout>
