--- a/src/components/LayoutSection.astro
+++ b/src/components/LayoutSection.astro
@@ -23,8 +23,8 @@ const { class: className, noMedia, col, row, noMargin } = Astro.props;
   class:list={[
     className,
     "flex gap-4 sm:gap-8",
-    noMedia ? row && "flex-row" : row && "flex-col sm:flex-row",
-    noMedia ? col && "flex-col" : col && "flex-row sm:flex-col",
+    noMedia ? row && "flex-row" : row && "flex-col md:flex-row",
+    noMedia ? col && "flex-col" : col && "flex-row md:flex-col",
     !noMargin && "m-4 sm:m-8",
   ]}
 >
