Change from cyan to sky

--- a/src/components/Navbar/NavbarDesktop.astro
+++ b/src/components/Navbar/NavbarDesktop.astro
@@ -23,7 +23,7 @@ const props = Astro.props;
 ---
 
 <div
-  class:list={["bg-gradient-to-r from-cyan-900 to-transparent", props.class]}
+  class:list={["bg-gradient-to-r from-sky-900 to-transparent", props.class]}
   {...props}
 >
   <div class="sticky top-0 flex flex-col px-4 py-8 justify-between h-screen">
