--- a/src/components/Navbar/NavbarMobile.astro
+++ b/src/components/Navbar/NavbarMobile.astro
@@ -24,12 +24,12 @@ const props = Astro.props;
 
 <nav-bar class:list={[props.class]} {...props}>
   <button
-    class="sticky top-0 w-full z-50 p-4 text-4xl text-left bg-gradient-to-b from-cyan-900 to-transparent"
+    class="sticky top-0 w-full z-50 p-4 text-4xl text-left bg-gradient-to-b from-sky-900 to-transparent"
     >Navigation</button
   >
   <nav
     class:list={[
-      "z-50 fixed inset-0 hidden flex flex-col justify-between p-4 bg-gradient-to-b from-cyan-900 to-transparent",
+      "z-50 fixed inset-0 hidden flex flex-col justify-between p-4 bg-gradient-to-b from-sky-900 to-transparent",
       props.class,
     ]}
     {...props}
