--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -20,7 +20,7 @@ const {
 <section
   class:list={[
     className,
-    "bg-cyan-900 bg-opacity-50",
+    "bg-sky-800 bg-opacity-50",
     !noPadding && "p-4 sm:px-8 py-4",
     !noMargin && "m-4 sm:m-8",
     !noRounded && "rounded-md",
