--- a/src/layouts/ArticleLayout.astro
+++ b/src/layouts/ArticleLayout.astro
@@ -46,7 +46,7 @@ const {
 <BaseLayout prevNav={prevNav} title={title} description={description}>
   <!-- Title Section -->
   <LayoutSection row class="justify-center items-center">
-    <div class="group relative overflow-hidden h-screen bg-cyan-900 rounded-md">
+    <div class="group relative overflow-hidden h-screen bg-sky-900 rounded-md">
       <Image
         class="z-10 h-screen w-full opacity-15 group-hover:scale-110 group-hover:opacity-100 transition-all object-cover"
         src={coverImage}
