--- a/src/layouts/PageProjectLayout.astro
+++ b/src/layouts/PageProjectLayout.astro
@@ -21,7 +21,7 @@ const { title, description } = Astro.props;
           <slot name="projectAbout" />
         </Section>
         <div
-          class="flex-grow flex flex-col overflow-y-scroll border-4 border-cyan-900 rounded-md"
+          class="flex-grow flex flex-col overflow-y-scroll border-4 border-sky-900 rounded-md"
         >
           <slot name="projects" />
         </div>
