--- a/src/pages/comp-experience/index.astro
+++ b/src/pages/comp-experience/index.astro
@@ -34,7 +34,7 @@ const currentNav = SITE_NAVIGATION.find((nav) =>
           currentNav?.children.map((nav) => (
             <a
               href={`${currentNav.href}${nav.href}`}
-              class="bg-cyan-950 rounded-md p-2 text-center content-center"
+              class="bg-sky-900 rounded-md p-2 text-center content-center"
             >
               {nav.label}
             </a>
