--- a/src/components/ExperienceBadge.astro
+++ b/src/components/ExperienceBadge.astro
@@ -11,7 +11,7 @@ if (!icons[src]) throw new Error(`"${src} does not exist in glob", ${icons}`);
 ---
 
 <div
-  class="group relative flex flex-col gap-1 justify-around items-center size-32 bg-cyan-900 p-4 rounded-md
+  class="group relative flex flex-col gap-1 justify-around items-center size-32 bg-sky-900 p-4 rounded-md
           hover:scale-110 transition-transform"
 >
   <div
@@ -28,7 +28,7 @@ if (!icons[src]) throw new Error(`"${src} does not exist in glob", ${icons}`);
     decoding="async"
     loading="lazy"
   />
-  <div class="w-fit mx-auto p-1 text-center text-sm bg-cyan-950 rounded-md">
+  <div class="w-fit mx-auto p-1 text-center text-sm bg-sky-950 rounded-md">
     {experience}
   </div>
 </div>
