--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -26,10 +26,10 @@ const props = Astro.props;
   <div class="flex flex-row justify-start items-start gap-2 flex-wrap">
     {
       SITE_NAVIGATION.map((nav) => (
-        <div class="flex flex-col justify-center items-start flex-wrap p-2 bg-cyan-900 bg-opacity-50 rounded-md">
+        <div class="flex flex-col justify-center items-start flex-wrap p-2 bg-sky-900 bg-opacity-50 rounded-md">
           <a href={nav.href}>{nav.label}</a>
           {nav.children && (
-            <div class="flex flex-row gap-2 flex-wrap text-cyan-100">
+            <div class="flex flex-row gap-2 flex-wrap text-sky-100">
               {nav.children.map((cnav) => (
                 <a href={`${nav.href}${cnav.href}`} class="text-sm">
                   {cnav.label}
@@ -47,7 +47,7 @@ const props = Astro.props;
       {
         socialMediaData.map((s) => (
           <ImageLink
-            class="bg-cyan-950 p-1 rounded-md"
+            class="bg-sky-950 p-1 rounded-md"
             src={icons[s.imagePath]()}
             href={s.href}
             alt={s.alt}
