Make the "Experience" in Computer Experience to "Career Fields"

--- a/src/pages/comp-experience/index.astro
+++ b/src/pages/comp-experience/index.astro
@@ -27,20 +27,20 @@ const currentNav = SITE_NAVIGATION.find((nav) =>
         I'm currently trying to specialize int <b>Web and Game Development</b>
       </p>
     </Section>
-    <Section noMargin class="flex flex-col items-center gap-2">
-      <h2>Experiences</h2>
+    <div class="flex flex-col justify-center items-center gap-2">
+      <h2 class="text-center leading-tight">Career Fields</h2>
       {
         currentNav?.children &&
           currentNav?.children.map((nav) => (
             <a
               href={`${currentNav.href}${nav.href}`}
-              class="bg-sky-900 rounded-md p-2 text-center content-center"
+              class=" px-2 py-1 text-lg text-center content-center bg-sky-900 bg-opacity-50 rounded-md"
             >
               {nav.label}
             </a>
           ))
       }
-    </Section>
+    </div>
   </LayoutSection>
   <Section textContent class="sm:w-3/4 sm:mx-auto">
     <h1>Fanshawe College 2019-2024</h1>
