--- a/src/components/ProjectShowcase.astro
+++ b/src/components/ProjectShowcase.astro
@@ -25,17 +25,20 @@ import githubImage from "../assets/icons/github-mark.svg";
 import FormattedDate from "./FormattedDate.astro";
 ---
 
-<Section noMargin noPadding class="group relative w-1/3" tabindex={0}>
-  <div class="rounded-md overflow-hidden transition-all">
-    <Image
-      class="group-hover:scale-125 group-hover:-translate-y-4 rounded-md object-contain transition-all"
-      src={coverImage}
-      alt={coverImageAlt}
-      width={1280}
-      height={720}
-    />
-  </div>
-  <div class="flex p-4">
+<Section
+  noMargin
+  noPadding
+  class="group relative w-full sm:w-2/3 md:w-3/4 overflow-hidden"
+  tabindex={0}
+>
+  <Image
+    class="opacity-45 group-hover:opacity-10 group-hover:-translate-y-20 mb-10 rounded-b-full object-contain transition-all"
+    src={coverImage}
+    alt={coverImageAlt}
+    width={1280}
+    height={720}
+  />
+  <div class="absolute bottom-0 flex p-4">
     <div class="flex-grow">
       <h1>{title}</h1>
       {
