ProjectShowcase image on hover more opaque

--- a/src/components/ProjectShowcase.astro
+++ b/src/components/ProjectShowcase.astro
@@ -32,7 +32,7 @@ import FormattedDate from "./FormattedDate.astro";
   tabindex={0}
 >
   <Image
-    class="opacity-45 group-hover:opacity-10 group-hover:-translate-y-20 mb-10 rounded-b-full object-contain transition-all"
+    class="opacity-45 group-hover:opacity-80 group-hover:-translate-y-1/4 mb-10 rounded-b-full object-contain transition-all"
     src={coverImage}
     alt={coverImageAlt}
     width={1280}
