Portrait is more appropriate in size.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,7 +27,7 @@ articles.sort(
   <LayoutSection
     noMedia
     col
-    class="relative justify-start min-h-screen overflow-hidden"
+    class="relative justify-start pb-48 overflow-hidden"
   >
     <Section noMargin class="h-fit sm:w-2/3">
       <p class="text-sm">My name is...</p>
@@ -51,7 +51,7 @@ articles.sort(
       </p>
     </Section>
     <Image
-      class="absolute right-0 bottom-0 object-cover w-1/2 md:w-fit -z-10"
+      class="absolute right-0 bottom-0 object-cover sm:w-2/3 md:w-fit -z-10"
       src={portraitImage}
       width={400}
       height={600}
