--- a/src/layouts/ArticleLayout.astro
+++ b/src/layouts/ArticleLayout.astro
@@ -9,10 +9,13 @@ import FormattedDate from "../components/FormattedDate.astro";
 import Section from "../components/Section.astro";
 import ImageLink from "../components/ImageLink.astro";
 
-import itchioImage from "../assets/icons/itch-io.svg";
-import steamImage from "../assets/icons/steam.svg";
-import githubImage from "../assets/icons/github-mark.svg";
+import itchioImage from "../icons/itch-io.svg";
+import steamImage from "../icons/steam.svg";
+import githubImage from "../icons/github-mark.svg";
 import LayoutSection from "../components/LayoutSection.astro";
+import ItchioLink from "../components/Icons/ItchioLink.astro";
+import SteamLink from "../components/Icons/SteamLink.astro";
+import GithubLink from "../components/Icons/GithubLink.astro";
 
 interface Props {
   prevNav: string;
@@ -87,34 +90,25 @@ const {
         <div class="flex-shrink flex flex-col justify-end items-end gap-2">
           {
             itchio && (
-              <ImageLink
-                src={itchioImage}
-                alt=""
+              <ItchioLink
                 href={itchio}
-                width={48}
-                height={48}
+                size={32}
               />
             )
           }
           {
             steam && (
-              <ImageLink
-                src={steamImage}
-                alt=""
+              <SteamLink
                 href={steam}
-                width={48}
-                height={48}
+                size={32}
               />
             )
           }
           {
             github && (
-              <ImageLink
-                src={githubImage}
-                alt=""
+              <GithubLink
                 href={github}
-                width={48}
-                height={48}
+                size={32}
               />
             )
           }
