Clean-up styling on BadgeDisplay

--- a/src/components/BadgeDisplay.astro
+++ b/src/components/BadgeDisplay.astro
@@ -30,9 +30,7 @@ const {
   class:list={[className]}
 >
   <h1 class="text-center mb-2">{title}</h1>
-  <div
-    class="flex flex-row flex-wrap justify-center items-stretch gap-4 w-full"
-  >
+  <div class="flex flex-row flex-wrap justify-center items-center gap-4">
     {
       src.map((badge) => (
         <ExperienceBadge
