Make BadgeDisplay consistent in each page

--- a/src/pages/comp-experience/software/index.astro
+++ b/src/pages/comp-experience/software/index.astro
@@ -36,7 +36,7 @@ const softwareExp = experiences.find((e) => e.id === "software")?.data;
       softwareExp && (
         <BadgeDisplay
           noMargin
-          class="flex grow"
+          class="flex-grow"
           title="Software Experiences"
           src={softwareExp}
         />
